--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿asgiref==3.8.1
+asgiref==3.8.1
 asttokens==2.4.1
 beautifulsoup4==4.12.3
 certifi==2024.6.2
@@ -51,7 +51,7 @@ scipy==1.14.0
 seaborn==0.13.2
 six==1.16.0
 soupsieve==2.5
-sqlparse==0.2.4
+sqlparse==0.4.3  
 stack-data==0.6.3
 tenacity==8.5.0
 threadpoolctl==3.5.0
@@ -60,3 +60,4 @@ traitlets==5.14.3
 tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
+
