--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.8.1
+asgiref==3.6.0
 asttokens==2.4.1
 beautifulsoup4==4.12.3
 certifi==2024.6.2
@@ -12,7 +12,6 @@ decorator==5.1.1
 Django==4.2.0
 django-mongoengine==0.5.6
 djangorestframework==3.15.2
-djongo==1.3.6
 dnspython==2.6.1
 executing==2.0.1
 fonttools==4.53.1
@@ -51,7 +50,7 @@ scipy==1.14.0
 seaborn==0.13.2
 six==1.16.0
 soupsieve==2.5
-sqlparse==0.4.3  
+sqlparse>=0.3.1
 stack-data==0.6.3
 tenacity==8.5.0
 threadpoolctl==3.5.0
